# axsdb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_interp_dataarray.py  benchmark_query.py  conftest.py
docs/: api.rst  conf.py  error_handling.rst  formats.rst  getting_started.rst  index.rst  requirements.txt
docs/api/: axsdb.interpolation.rst  axsdb.math.rst  axsdb.rst  axsdb.units.rst
docs/dev/: benchmarking.rst  installation.rst  interpolation.rst  release.rst  typing.rst
playgrounds/: benchmark.py
src/axsdb/: __init__.py  _factory.py  core.py  error.py  factory.py  interpolation.py  math.py  units.py
src/axsdb/testing/: fixtures.py
src/eradiate_absdb/: __init__.py  _version.py  cli.py  core.py  error.py
tests/: test_core.py  test_error.py  test_factory.py  test_interpolation.py  test_math.py  test_performance.py  test_units.py
tests/benchmarks/: __init__.py  test_scipy_alternatives.py
tests/data/: afgl_1986-us_standard.nc
tests/data/nanockd_v1/: nanockd_v1-295_305.nc  nanockd_v1-305_315.nc  nanockd_v1-315_325.nc  nanockd_v1-325_335.nc  nanockd_v1-335_345.nc  nanockd_v1-345_355.nc  nanockd_v1-355_365.nc  nanockd_v1-365_375.nc  nanockd_v1-375_385.nc  nanockd_v1-385_395.nc  nanockd_v1-395_405.nc
tests/data/nanomono_v1/: nanomono_v1.nc  spectral.csv
