[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axsdb"
version = "0.0.4"
description = "An absorption database reader for the Eradiate radiative transfer model."
readme = "README.md"
authors = [{ name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }]
requires-python = ">=3.9"
dependencies = [
  "attrs",
  "cachetools",
  "netcdf4",
  "numba>=0.58,<0.63; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "numba>=0.58; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "pint",
  "scipy",
  "typer",
  "xarray>=2024.7.0",
]

[project.scripts]
axsdb = "axsdb.cli:main"

[dependency-groups]
test = [
  "coverage>=7.10.0",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-doctestplus",
  "rich",
]
docs = [
  "autodocsumm>=0.2.14",
  "shibuya",
  "sphinx",
  "sphinx-autobuild>=2021",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design",
  "sphinx-iconify",
]
benchmark = ["pytest-benchmark"]
dev = [
  "taskipy",
  { include-group = "test" },
  { include-group = "docs" },
  { include-group = "benchmark" },
]
pycharm = ["setuptools", { include-group = "dev" }]
interactive = ["jupyterlab", "matplotlib"]

[tool.coverage.html]
directory = "./reports/coverage/html"

[tool.coverage.json]
output = "./reports/coverage/coverage.json"

[tool.coverage.paths]
equivalent = ["src/", "__pypackages__/"]

[tool.coverage.report]
omit = [
  "src/*/__init__.py",
  "src/*/cli.py",
  "src/*/_version.py",
  "src/*/testing/fixtures.py",
]
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests", "src", "docs"]
norecursedirs = [".git", ".env", "dist", "__pypackages__"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--doctest-plus --doctest-glob='*.rst'"
doctest_plus = "enabled"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.taskipy.tasks]
docs = { cmd = "sphinx-build -b html docs docs/_build/html", cwd = "." }
docs-clean = { cmd = "rm -rf docs/_build/", cwd = "." }
docs-serve = { cmd = "sphinx-autobuild docs docs/_build/html", cwd = "." }
docs-lock = { cmd = "uv export --frozen --no-hashes --output-file=docs/requirements.txt", cwd = "." }
test = { cmd = "pytest", cwd = "." }
test-cov = { cmd = "pytest --cov=src", cwd = "." }
test-cov-report = { cmd = "pytest --cov=src --cov-report=html", cwd = "." }
benchmark = { cmd = "pytest benchmarks", cwd = "." }
