[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axsdb"
version = "0.1.1"
description = "An absorption database reader for the Eradiate radiative transfer model."
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [{ name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }]
requires-python = ">=3.9"
keywords = [
  "radiative-transfer",
  "absorption",
  "spectroscopy",
  "atmosphere",
  "eradiate",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "attrs",
  "cachetools",
  "netcdf4",
  "numba>=0.58",
  "pint",
  "scipy",
  "typer",
  "xarray>=2024.7.0",
]

[project.urls]
Homepage = "https://github.com/eradiate/axsdb"
Documentation = "https://axsdb.readthedocs.io"
Repository = "https://github.com/eradiate/axsdb"
Changelog = "https://github.com/eradiate/axsdb/blob/main/CHANGELOG.md"

[project.scripts]
axsdb = "axsdb.cli:main"

[dependency-groups]
test = [
  "coverage>=7.10.0",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-doctestplus",
  "rich",
]
docs = [
  "autodocsumm>=0.2.14",
  "myst-parser",
  "shibuya",
  "sphinx",
  "sphinx-autobuild>=2021",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design",
  "sphinx-iconify",
]
benchmark = ["pytest-benchmark"]
dev = [
  "taskipy",
  { include-group = "test" },
  { include-group = "docs" },
  { include-group = "benchmark" },
]
pycharm = ["setuptools", { include-group = "dev" }]
interactive = ["jupyterlab", "matplotlib"]

[tool.coverage.html]
directory = "./reports/coverage/html"

[tool.coverage.json]
output = "./reports/coverage/coverage.json"

[tool.coverage.paths]
# Map CI runner source paths back to the local "src/" directory so that
# "coverage combine" can merge data collected on different OSes.
source = [
  "src/",
  "/home/runner/work/axsdb/axsdb/src/",
  "/Users/runner/work/axsdb/axsdb/src/",
  "D:\\a\\axsdb\\axsdb\\src\\",
]

[tool.coverage.report]
# Skip missing source files (e.g. third-party Cython .pyx) when combining
# coverage data from multiple OSes.
ignore_errors = true
omit = [
  "src/*/__init__.py",
  "src/*/cli.py",
  "src/*/_version.py",
  "src/*/testing/fixtures.py",
]
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests", "src", "docs"]
norecursedirs = [".git", ".env", "dist", "__pypackages__"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--doctest-plus --doctest-glob='*.rst'"
doctest_plus = "enabled"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.taskipy.tasks]
docs = { cmd = "sphinx-build -b html docs docs/_build/html", cwd = "." }
docs-clean = { cmd = "rm -rf docs/_build/", cwd = "." }
docs-serve = { cmd = "sphinx-autobuild docs docs/_build/html", cwd = "." }
docs-lock = { cmd = "uv export --frozen --no-hashes --output-file=docs/requirements.txt", cwd = "." }
test = { cmd = "pytest", cwd = "." }
test-cov = { cmd = "pytest --cov=src", cwd = "." }
test-cov-report = { cmd = "pytest --cov=src --cov-report=html", cwd = "." }
benchmark = { cmd = "pytest benchmarks", cwd = "." }
